src/objects/vlocity_ins__CustomerInteractionTopic__c.object
<CustomObject>
    <description>A topic discussed or addressed during a customer interaction such as a customer account, a customer asset, a quote or a case. A topic could even be a specific field or aspect of an object such as a charge on a bill or a co-pay on a health insurance coverage.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionId__c</fullName>
        <label>Customer Interaction</label>
        <referenceTo>vlocity_ins__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy Relationship</label>
        <referenceTo>vlocity_ins__PolicyPartyRelationship__c</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Customer Interaction Topics</relationshipLabel>
        <relationshipName>CustomerInteractionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Role__c</fullName>
        <formula>vlocity_ins__PolicyPartyRelationshipId__r.vlocity_ins__Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Customer Interaction Topic</label>
    <nameField>
        <label>Customer Interaction Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interaction Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>